--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "mocha -r ts-node/register 'tests/**/*.ts'",
     "tsc": "tsc -p tsconfig.json",
-    "prepublishOnly": "npm run tsc && npm version patch"
+    "prepublishOnly": "npm run tsc"
   },
   "repository": {
     "type": "git",
