--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^10.0.0"
+    "axios": "^0.21.1"
   }
 }
